# profilingfunwithhaskell

./: .gitignore  README.md  benchloggertest.cabal  benchloggertest.prof  report.html  slog.py  tldr.txt  whatidid.txt
src/: Main.hs
